[package]
name = "testmulti"
version = "0.1.0"
edition = "2018"

[lib]
name = "testmulti"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
flume = "0.10.7"
lazy_static = "1.4.0"
socket2 = { version = "0.4.1", features = ["all"] }

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]
